removed java version check. assume java 8 for execution